--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
                             <!-- Replace the items below with your own, edit between the > and < symbols -->
 
-                            <div class="Cheerful Guy">Cheerful Guy</div>
+                            <div class="Fun">Fun</div>
                             <div class="Worker">Worker</div>
-                            <div class="Creative Man">Creative Man</div>
+                            <div class="Creative">Creative</div>
                             <div class="GAMER">Gamer</div>
 
                             <!-- for a smooth transistion animation, repeat your first item below-->
