Like and Dislike
It replaced follow and message

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             </div>
 			
 			<div class="actions">
-				<button class="btn">Follow</button>
-				<button class="btn">Message</button>
+				<button class="btn">Like</button>
+				<button class="btn">Dislike</button>
 			</div>
 
             <div id="close"></div>
