--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="circle-2"></div>
 
                 <!-- Replace the image below with your own, change the "alt" text to your name -->
-				<img src="skye's ex.png" alt="Skye Yang">
+				<img src="skye ex2.png" alt="Skye Yang">
                 <!-- Replace the image above with your own, change the "alt" text to your name -->
 
 
